--- a/index.qmd
+++ b/index.qmd
@@ -37,7 +37,9 @@ We estimate the age of a site by calculating the years since the last fire. We t
 
 ```{r prep_parks,echo=FALSE,warning=FALSE,message=FALSE}
 
-  tar_load(parks)
+  #tar_load(parks) #This apparently is no longer allowed per a new update of targets
+
+  parks <- read_rds("_targets/objects/parks")
 
 # need to merge each complex into a single geometry
 
