--- a/report_prototype.qmd
+++ b/report_prototype.qmd
@@ -449,6 +449,19 @@ invasives %>%
   addRasterImage(x = raster::raster(most_recent_ndvi_raster),
                  group = "NDVI",
                  colors = ndvi_pal) %>%
+    addRasterImage(x = raster::raster(delta_ndvi_raster),
+                 group = "delta NDVI<br/>(long-term)",
+                 colors = delta_ndvi_pal) %>%
+  # addRasterImage(x = raster::raster(quarterly_delta_ndvi_raster),
+  #              group = "delta NDVI<br/>(quarterly)",
+  #              colors = delta_ndvi_pal) %>%
+  addRasterImage(x = raster::raster(monthly_delta_ndvi_raster),
+                 group = "delta NDVI<br/>(monthly)",
+                 colors = delta_ndvi_pal) %>%
+  hideGroup("delta NDVI<br/>(quarterly)") %>%
+  addMarkers(data = focal_invasives,
+             label = focal_invasives$scientific_name,
+             group = "Invasives") %>%
   addPolygons(data = fires_wgs_truncated,
               color = "red",
               fill = TRUE,
@@ -467,69 +480,54 @@ invasives %>%
                label = focal_stations_sf$station_name,
                group = "Stations") %>%
     hideGroup("Stations") %>%
-    addLegend_decreasing(position = "bottomright",
-            pal = pal,
-            values = ~fires_wgs_truncated$Years,
-    title = "Years<br/>Since<br/>Fire",
-    opacity = 1) %>%
-  leaflet::addLegend(position = "bottomright",
-            pal = ndvi_pal,          
-            values = ~values(raster::raster(most_recent_ndvi_raster)),
-            #values = ~c(-1,1),
-            opacity = 1,
-            title = "NDVI") %>%
-    addLayersControl(
-    baseGroups = c("NatGeo","World Imagery"),
-    overlayGroups = c("NDVI", "Fire Outlines","Fires", "Park", "Stations"),
-    options = layersControlOptions(collapsed = FALSE),position = "topright") %>%
-  fitBounds(bbox[1], bbox[2], bbox[3], bbox[4])
-
-```
-
-Figure 1. Leaflet map showing NDVI and the number of years since the most recent fire.  NA values in the NDVI layer indicate missing data (e.g. due to clouds, water, etc.).  NDVI data are from `r most_recent_ndvi_date`. NA values in the fire layer indicate that no fires have been recorded for that area. Note that the color scale for fires has been truncated, and any sites with more than 20 years since fire appear as 20.  The number of years since fire can be seen by hovering your cursor over the polygon of interest. Vegetation age polygons for the park are available at: `r park_fires_file`. A raster layer of vegetation age (years since fire) is available at https://github.com/AdamWilsonLab/emma_report/releases/download/current/years_since_fire.tif
-
-```{r delta_ndvi, fig.width = 10, fig.height = 7, echo = FALSE, warning = FALSE, message = FALSE}
-
-leaflet(data = focal_wgs) %>%
-  addProviderTiles(providers$Esri.WorldImagery, group = "World Imagery") %>%
-  addProviderTiles("Esri.NatGeoWorldMap", group = "NatGeo") %>%
-  #addProviderTiles("NASAGIBS.ModisTerraTrueColorCR", group = "True Colors") %>%
-  addPolygons(color = "black",
-              stroke = TRUE,
-              fill = FALSE,
-              group = "Park") %>%
-  addRasterImage(x = raster::raster(delta_ndvi_raster),
-                 group = "delta NDVI<br/>(long-term)",
-                 colors = delta_ndvi_pal) %>%
-  # addRasterImage(x = raster::raster(quarterly_delta_ndvi_raster),
-  #              group = "delta NDVI<br/>(quarterly)",
-  #              colors = delta_ndvi_pal) %>%
-  addRasterImage(x = raster::raster(monthly_delta_ndvi_raster),
-                 group = "delta NDVI<br/>(monthly)",
-                 colors = delta_ndvi_pal) %>%
-  hideGroup("delta NDVI<br/>(quarterly)") %>%
-  addMarkers(data = focal_invasives,
-             label = focal_invasives$scientific_name,
-             group = "Invasives") %>%
-  leaflet::addLegend(position = "bottomright",
+    hideGroup("Invasives") %>%
+    hideGroup("NDVI") %>%
+    hideGroup("delta NDVI<br/>(long-term)") %>%
+  
+    # add legends
+  
+    leaflet::addLegend(position = "topright",
                      pal = delta_ndvi_pal,          
                      values = ~values(delta_ndvi_raster),
                      #values = ~c(-1,1),
                      opacity = 1,
                      title = "delta<br/>NDVI") %>%
-  addLayersControl(
-    baseGroups = c("World Imagery","NatGeo"),
-    overlayGroups = c("delta NDVI<br/>(long-term)",
-                      #"delta NDVI<br/>(quarterly)",
+  
+    leaflet::addLegend(position = "topright",
+            pal = ndvi_pal,          
+            values = ~values(raster::raster(most_recent_ndvi_raster)),
+            #values = ~c(-1,1),
+            opacity = 1,
+            title = "NDVI") %>%
+
+    addLegend_decreasing(position = "bottomright",
+            pal = pal,
+            values = ~fires_wgs_truncated$Years,
+    title = "Years<br/>Since<br/>Fire",
+    opacity = 1) %>%
+  
+    addLayersControl(
+    baseGroups = c("NatGeo","World Imagery"),
+    overlayGroups = c("Park",
+                      "Stations",
                       "delta NDVI<br/>(monthly)",
-                      "Park",
-                      "Invasives"),
-    options = layersControlOptions(collapsed = FALSE),position = "topright") %>%
+                      "delta NDVI<br/>(long-term)",
+                      #"delta NDVI<br/>(quarterly)",
+                      "NDVI",
+                      "Fire Outlines",
+                      "Fires",
+                      "Invasives"
+                      ),
+    options = layersControlOptions(collapsed = FALSE),position = "topleft") %>%
   fitBounds(bbox[1], bbox[2], bbox[3], bbox[4])
+
+                      
 
 ```
 
-Figure 2. Leaflet map showing delta NDVI, the difference between observed NDVI and expected NDVI (i.e., the long-term mean). Monthly delta NDVI is calculated relative to the mean NDVI of the current month across the MODIS record while long-term delta NDVI is calculated relative the mean NDVI across the entire MODIS record. NA values in the delta NDVI layer indicate missing data (e.g. due to clouds, water, etc.).  NDVI data are from `r most_recent_ndvi_date`. The mean current NDVI layer is available at https://github.com/AdamWilsonLab/emma_envdata/releases/download/current/mean_ndvi.tif .
+Figure 1. Leaflet map showing NDVI and the number of years since the most recent fire.  NA values in the NDVI layer indicate missing data (e.g. due to clouds, water, etc.).  NDVI data are from `r most_recent_ndvi_date`. NA values in the fire layer indicate that no fires have been recorded for that area. Note that the color scale for fires has been truncated, and any sites with more than 20 years since fire appear as 20.  The number of years since fire can be seen by hovering your cursor over the polygon of interest. Vegetation age polygons for the park are available at: `r park_fires_file`. A raster layer of vegetation age (years since fire) is available at https://github.com/AdamWilsonLab/emma_report/releases/download/current/years_since_fire.tif
+
+Delta NDVI is the difference between observed NDVI and expected NDVI (i.e., the long-term mean). Monthly delta NDVI is calculated relative to the mean NDVI of the current month across the MODIS record while long-term delta NDVI is calculated relative the mean NDVI across the entire MODIS record. NA values in the delta NDVI layer indicate missing data (e.g. due to clouds, water, etc.).  NDVI data are from `r most_recent_ndvi_date`. The mean current NDVI layer is available at https://github.com/AdamWilsonLab/emma_envdata/releases/download/current/mean_ndvi.tif .
 
 ## Vegetation Ages
 
@@ -713,8 +711,7 @@ Figure 3. Histogram of vegetation ages.  For the purposes of this plot, any vege
 
 ## Drought Indices
 
-### NDWI
-```{r NDWI_plot, fig.width = 10, fig.height = 7, echo = FALSE, warning = FALSE, message = FALSE}
+```{r NDWI_plot, fig.width = 10, fig.height = 7, echo = FALSE, warning = FALSE, message = FALSE, eval=FALSE, include=FALSE}
 
 library(raster)
 library(mapview)
@@ -751,17 +748,20 @@ library(leafem)
     options = layersControlOptions(collapsed = FALSE),position = "topright") %>%
   fitBounds(bbox[1], bbox[2], bbox[3], bbox[4])
 
+# Below is the text that accompanies this figure  
+#   Figure 6. The Normalized Difference Water Index [(NDWI)](https://en.wikipedia.org/wiki/Normalized_difference_water_index) is a measure of the water content of leaves ranging between -1 (no water) and 1 (water). The NDWI data were last updated on `r most_recent_ndwi_date` (although they may be older than the update date).
+# 
+# Interpreting NDWI:
+# 
+#   * 1 - 0.2 = Water surface,
+#   * 0.2 – 0.0 = Flooding, humidity,
+#   * 0.0 – -0.3 = Moderate drought, non-aqueous surfaces,
+#   * -0.3 – -1 = Drought, non-aqueous surface
+
+  
 
 ```
 
-Figure 6. The Normalized Difference Water Index [(NDWI)](https://en.wikipedia.org/wiki/Normalized_difference_water_index) is a measure of the water content of leaves ranging between -1 (no water) and 1 (water). The NDWI data were last updated on `r most_recent_ndwi_date` (although they may be older than the update date).
-
-Interpreting NDWI:
-
-  * 1 - 0.2 = Water surface,
-  * 0.2 – 0.0 = Flooding, humidity,
-  * 0.0 – -0.3 = Moderate drought, non-aqueous surfaces,
-  * -0.3 – -1 = Drought, non-aqueous surface
   
 ### SPI
 
